src/containers/Error/Error.css
.error-background {
    background-color: #fdfdfd;
    height: 100vh;
    margin: auto;
}

.error-content-wrapper {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.error-content-container {
    margin: 90px;
    gap: 32px;
    flex-wrap: wrap;
    width: 1127px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.error-text-container {
    display: flex;
    gap: 24px;
    max-width: 569px;
    flex-direction: column;
    justify-content: center;
}

.error-text-container h1 {
    color: black;
    margin: 0;
}
.error-text-container p {
    font-family: Raleway;
    margin: 0;
    line-height: 2;
}

.error-img {
    max-width: 478px ;
    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.11);
}

.error-back-button {
    width: 33%;
    color: #212121;
    font-family: Raleway;
    font-size: 19px;
    font-weight: 700;
    background-color: #FBB956;
    border: 1px solid #FBB956;
    border-radius: 6px;
    height: 44px;
    padding: 0 24px ;
    cursor: pointer;
}

.error-back-button:hover {
    font-weight: 700;
    background-color: #ff9900 ;
    color: black;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.304);
    border: 1px solid #ff9900;
}

@media screen and (max-width: 1259px) {
    .error-content-container {
        flex-direction: column;
        width: fit-content;
        margin: 20px;
    }
    .error-img {
        width: 100%;
        margin-top: 40px;
    }

    .error-back-button {
        width: 200px;
        margin-top: 0;
    }
}
@media screen and (max-width: 550px) {
    .error-back-button {
        width: 100%;
    }
}

